[stub-idp] use a builder to create test idp users